[gd_scene load_steps=4 format=3 uid="uid://bo153wubc0sl1"]

[ext_resource type="Script" uid="uid://bd2y3dnu77y4h" path="res://addons/godot graph visualizer/graphs/custom_graph_nodes/sam_graph_node.gd" id="1_ked3x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sh3so"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l0574"]

[node name="SamGraphNode" type="GraphNode"]
offset_right = 118.0
offset_bottom = 118.0
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("1_ked3x")

[node name="PlaceHolder" type="Control" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="NodeName" type="RichTextLabel" parent="PlaceHolder"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.781
anchor_right = 0.5
anchor_bottom = 0.781
offset_left = -242.5
offset_top = 41.796997
offset_right = 242.5
offset_bottom = 98.797
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_sh3so")
theme_override_styles/focus = SubResource("StyleBoxEmpty_l0574")
horizontal_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
